# gal_projekt

./: .gitignore  CMakeLists.txt  README.md  gen_graphs.sh  install.sh  main.cpp  test_algorithm.sh
Graphs/: non-planar_graph.gml  planar_graph.gml
src/: algorithms.h  cli_opts.cpp  cli_opts.h  conflict_pair.cpp  conflict_pair.h  counting_sort.cpp  counting_sort.h  edge_interval.cpp  edge_interval.h  graph_generator.cpp  graph_generator.h  utils.cpp  utils.h
src/algorithms/: boyer_myrvold.cpp  boyer_myrvold.h  hopcroft_tarjan.cpp  hopcroft_tarjan.h  left_right.cpp  left_right.h
